# SysY

./: .gitignore  CMakeLists.txt  README.md  项目整体流程.txt
docx/: work1.md  work2.md  work3.md  work4.md
include/: Lexer.h  Parser.h  ast.h  ast_visitor.h  ir.h  print_visitor.h  semantic_analyzer.h  symbol_table.h  token.h
src/: ast.cpp  lexer.cpp  main.cpp  parser.cpp  print_visitor.cpp  scanner.l  semantic_analyzer.cpp  symbol_table.cpp
tests/work1_test/: array_loop_test.sy  basic_test.sy  condition_test.sy  function_test.sy  variable_test.sy  while_loop_test.sy
tests/work2_test/: example1.sy  example3_error2.sy
tests/work3_test/: array_program.sy  basic_variables.sy  control_flow.sy  correct_syntax.sy  function_program.sy  mismatched_brackets.sy  missing_semicolon.sy  multiple_declarations.sy  number_constants.sy
tests/work4_test/: const_assignment_error.sy  non_integer_array_index.sy  redefined_function.sy  return_type_mismatch.sy  type_mismatch_assignment.sy  type_mismatch_operands.sy  undefined_function.sy  undefined_variable.sy  wrong_argument_count.sy
tools/: README.md  test_runner.ps1
work1_test/: nested_loop_test.sy
work2_test/: example3.sy  example3_error1.sy
